--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,12 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="jar" depends="compile">
+    <jar destfile="${jar-dir}/${ant.project.name}.jar" basedir="${classes-dir}">
+        <manifest>
+            <attribute name="Main-Class" value="${main-class}"/>
+        </manifest>
+        <zipgroupfileset dir="${lib-dir}" includes="*.jar"/>
+    </jar>
+</target>
 </project>
