--- a/build.xml
+++ b/build.xml
@@ -78,4 +78,10 @@
         <zipgroupfileset dir="${lib-dir}" includes="*.jar"/>
     </jar>
 </target>
+
+        <target name="run" depends="AccuPicks-impl.jar">
+            <exec dir="bin" executable="launcher.exe">
+                <arg file="${dist.jar}"/>
+            </exec>
+        </target>
 </project>
