--- a/build.xml
+++ b/build.xml
@@ -72,9 +72,12 @@
     -->
 
 
-        <target name="run" depends="AccuPicks-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
+    <target name="jar" depends="compile">
+    <jar destfile="${jar-dir}/${ant.project.name}/dist.jar" basedir="${classes-dir}">
+        <manifest>
+            <attribute name="Main-Class" value="${main-class}"/>
+        </manifest>
+        <zipgroupfileset dir="${lib-dir}" includes="*.jar"/>
+    </jar>
+</target>
 </project>
