--- a/build.xml
+++ b/build.xml
@@ -71,13 +71,37 @@
 
     -->
 
+<jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+    <zipgroupfileset dir="dist" includes="*.jar"/>
+    <zipgroupfileset dir="dist/lib" includes="*.jar" excludes=""/>
 
-    <target name="jar" depends="compile">
-    <jar destfile="${jar-dir}/${ant.project.name}/dist.jar" basedir="${classes-dir}">
-        <manifest>
-            <attribute name="Main-Class" value="${main-class}"/>
-        </manifest>
-        <zipgroupfileset dir="${lib-dir}" includes="*.jar"/>
-    </jar>
+    <manifest>
+        <attribute name="Main-Class" value="${main.class}"/>
+        <attribute name="Class-Path" value="${mf.classpath}"/>
+    </manifest>
+</jar>
+
+<path id="build.classpath">
+	<fileset dir="${basedir}/">
+		<include name="${lib.dir}/*.jar"/>
+	</fileset>
+</path>
+
+<pathconvert property="mf.classpath" pathsep=" ">
+	<path refid="build.classpath"/>
+	<mapper>
+		<chainedmapper>
+			<flattenmapper/>
+			<globmapper from="*.jar" to="lib/*.jar"/>
+		</chainedmapper>
+	</mapper>
+</pathconvert>
+<path id="jars">
+    <fileset dir="${lib.dir}" includes="**/*.jar"/>
+</path>
+
+<target name="compile">
+	<mkdir dir="${build.dir}"/>
+	<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="jars" debug="on"/>
 </target>
 </project>
