--- a/build.xml
+++ b/build.xml
@@ -71,7 +71,7 @@
 
     -->
 
-<jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+<jar destfile="final/Accupicks.jar" filesetmanifest="skip">
     <zipgroupfileset dir="dist" includes="*.jar"/>
     <zipgroupfileset dir="dist/lib" includes="*.jar" excludes=""/>
 
