--- a/build.xml
+++ b/build.xml
@@ -58,19 +58,12 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="AccuPicks-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
+
 
     Notice that the overridden target depends on the jar target and not only on 
     the compile target as the regular run target does. Again, for a list of available 
     properties which you can use, check the target you are overriding in the
     nbproject/build-impl.xml file. 
-
-    -->
-
 <jar destfile="final/AccuPicks.jar" filesetmanifest="skip">
     <zipgroupfileset dir="dist" includes="*.jar"/>
     <zipgroupfileset dir="dist/lib" includes="*.jar" excludes=""/>
@@ -104,4 +97,43 @@
 	<mkdir dir="${build.dir}"/>
 	<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="jars" debug="on"/>
 </target>
+    -->
+
+	  <target name="package-for-store" depends="jar">
+
+        <!-- Change the value of this property to be the name of your JAR,
+             minus the .jar extension. It should not have spaces.
+             <property name="store.jar.name" value="MyJarName"/>
+        -->
+        <property name="store.jar.name" value="AccuPicks"/>
+
+
+        <!-- don't edit below this line -->
+
+        <property name="store.dir" value="store"/>
+        <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+
+        <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+
+        <delete dir="${store.dir}"/>
+        <mkdir dir="${store.dir}"/>
+
+        <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+            <zipgroupfileset dir="dist" includes="*.jar"/>
+            <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}"/>
+            </manifest>
+        </jar>
+
+        <zip destfile="${store.jar}">
+            <zipfileset src="${store.dir}/temp_final.jar"
+            excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+        </zip>
+
+        <delete file="${store.dir}/temp_final.jar"/>
+
+    </target>
+        
 </project>
