--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.smtp.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${libs.Mail.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
