--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.mail.jar=C:\\Users\\Stephan\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.smtp.jar=C:\\Users\\Stephan\\Desktop\\javamail1_4_7\\javamail-1.4.7\\lib\\smtp.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=D:\\Stephan\\Programming\\Libs\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -39,7 +40,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.smtp.jar}:\
     ${file.reference.mail.jar}:\
-    ${libs.Mail.classpath}
+    ${libs.Mail.classpath}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
